# Panel_Lavadora_Mejorado

./: .gitignore  CMakeLists.txt  Calibracion_sensor.py  README.md  test_agua.py  test_calibra.py  union.py
micropython/: README.md  actions.py  alarmas.py  digital_timer.py  main_panel.py  server.py
panel/: CMakeLists.txt  crotaryled.h  led.c  main_panel.c  peripherals.c  peripherals.h  pin_list.h  pines.h
